[gd_scene load_steps=17 format=2]

[ext_resource path="res://script/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://assets/austronauta/glowing_circle.png" type="Texture" id=2]
[ext_resource path="res://assets/music/laser.wav" type="AudioStream" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.583, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.518868, 1 ), 0.0, -5.63459, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.122257, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 0.8 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 60, 10, 1 )
flag_align_y = true
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 0.1
scale_curve = SubResource( 7 )

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.583, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.5, 1 ), 0.0, -2.49341, 0, 0, Vector2( 1, 0.0011363 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
spread = 50.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[node name="LaserBeam2D" type="RayCast2D"]
enabled = true
cast_to = Vector2( 250, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 1.50196, 1.50196, 1.50196, 1 )
position = Vector2( 4.94068, 0 )
scale = Vector2( 0.955085, 0.1 )
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 0.956863, 0.0235294, 0.0235294, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="CastingParticles2D" type="Particles2D" parent="."]
modulate = Color( 0.956863, 0.0235294, 0.0235294, 1 )
show_behind_parent = true
emitting = false
lifetime = 0.3
visibility_rect = Rect2( 0, -18.722, 29.676, 38.484 )
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="BeamParticles2D" type="Particles2D" parent="."]
modulate = Color( 0.956863, 0.0235294, 0.0235294, 1 )
emitting = false
amount = 52
preprocess = 1.0
randomness = 1.0
visibility_rect = Rect2( -2500, -2500, 5000, 5000 )
local_coords = false
draw_order = 1
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
modulate = Color( 0.956863, 0.0235294, 0.0235294, 1 )
show_behind_parent = true
emitting = false
amount = 16
lifetime = 0.3
visibility_rect = Rect2( -2500, -2500, 5000, 5000 )
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Audio" type="Node" parent="."]

[node name="Firing" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )
